<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:context=".ui.Checking">

    <TextView
        android:id="@+id/nameApartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameAparment"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/descriptionAparment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:text="@string/descriptionAparment"
        android:layout_below="@+id/nameApartment"
        android:textSize="16dp"
        android:textStyle="italic" />


    <TextView
        android:id="@+id/ubicacionAparment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="15dp"
        android:clickable="true"
        android:text="@string/locationAparment"
        android:textColorLink="@color/orange"
        android:textSize="16dp"
        android:textStyle="normal" />


    <com.google.android.material.chip.ChipGroup
        layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipElement"
            style="@style/customChipStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            layout_gravity="center"
            android:text="@string/elements"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBrokenElements"
            style="@style/customChipStyle"
            layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elementsBroken"
            android:textAlignment="center" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerChecking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/floatingActionMenuChecking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:menu_fab_label="Menú">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/floatingButtonAddElement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                app:fab_label="Agregar Elemento" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/floatingButtonDoneChecking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done_cheking"
                app:fab_label="Finalizar Chequeo" />


        </com.github.clans.fab.FloatingActionMenu>


    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>