<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundColor"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddElement">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/textNameElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="24dp"
            android:hint="Nombre"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:hint="Cantidad"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNameElement" />

        <CheckBox
            android:id="@+id/checkBoxIsBroken"
            android:layout_width="109dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="217dp"
            android:text="@string/is_broken"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.207"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textQuantity" />


        <Button
            android:id="@+id/buttonLoadImage"
            android:layout_width="242dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginStart="13dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:onClick="onclick"
            android:text="@string/loadImage"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/imageElementBroken"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/checkBoxIsBroken"
            app:layout_constraintTop_toBottomOf="@+id/textQuantity"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageElementBroken"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="104dp"
            android:contentDescription="@string/image_broken_element"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxIsBroken"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="354dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:text="@string/add"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageElementBroken" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>